@startuml

title __HW4_CLIENT's Class Diagram__\n

  package  {
    class CalcVisitor {
    }
  }
  

  package  {
    class CalculateState {
    }
  }
  

  package  {
    class CalculatorView {
    }
  }
  

  package  {
    class ContextController {
    }
  }
  

  package  {
    class ErrorState {
    }
  }
  

  package  {
    class FirstOperandState {
    }
  }
  

  package  {
    class NextOperandState {
    }
  }
  

  package  {
    class Operand {
    }
  }
  

  package  {
    interface OperationModel {
    }
  }
  

  package  {
    class Operator {
    }
  }
  

  package  {
    class SecondOperandState {
    }
  }
  

  package  {
    class StartState {
    }
  }
  

  package  {
    abstract class State {
    }
  }
  

  package  {
    class StringVisitor {
    }
  }
  

  package  {
    interface Visitor {
    }
  }
  

  package  {
    class main {
    }
  }
  

  CalcVisitor -up-|> Visitor
  CalculateState -up-|> State
  CalculatorView -up-|> JFrame
  ContextController -up-|> ActionListener
  ContextController o-- CalculatorView : calculator
  ContextController o-- State : currentState
  ContextController o-- OperationModel : firstOperand
  ContextController o-- OperationModel : secondOperand
  ContextController o-- OperationModel : operator
  ErrorState -up-|> State
  FirstOperandState -up-|> State
  NextOperandState -up-|> State
  Operand -up-|> OperationModel
  Operator -up-|> OperationModel
  SecondOperandState -up-|> State
  StartState -up-|> State
  State o-- ContextController : context
  StringVisitor -up-|> Visitor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
